vlib/v/checker/tests/bin_lit_has_space_err.vv
fn main() {
    a := 0b1010 101
}
